<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".view.ResultadoActivity">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente"
            android:layout_marginStart="10dp"
            android:textColor="@color/letra"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/edt_cliente"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tensao"
                android:textColor="@color/letra"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/edt_tensao"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corrente"
                android:textColor="@color/letra"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_corrente"
                android:inputType="numberDecimal"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distancia"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/letra"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_distancia"
                android:hint="em metros"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/atencao"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rad_cobre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cu"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>
                    <RadioButton
                        android:id="@+id/rad_alum"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/alu"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bitola"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/letra"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_fio"
                android:layout_marginStart="5dp"
                android:textColor="@color/letra"
                android:textSize="18sp"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potencia"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/letra"/>
            <EditText
                android:id="@+id/edt_potencia"
                android:layout_marginStart="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queda"
                android:textSize="18sp"
                android:textColor="@color/letra"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/edt_queda"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disjuntor"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/letra"/>
            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_disj"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/atencao"
                android:textSize="18sp"
                android:inputType="numberDecimal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="A"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tipoDisj"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar"
                android:layout_marginStart="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:onClick="voltarInicio"/>
            <Button
                android:id="@+id/btn_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:layout_marginTop="30dp"
                android:onClick="inserirDados"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>